--- a/www/static/css/styles.css
+++ b/www/static/css/styles.css
@@ -1,6 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,500;1,6..96,500&display=swap');
-
-
 *{
     color: white;
     margin: 0;
@@ -63,6 +61,20 @@ li, a {
     
 }
 
+/* Navbar Icon */
+.navbar-icon {
+    width: 30px;
+    height: 30px;
+    vertical-align: middle;
+    filter: brightness(0) invert(1); /* Makes icon white */
+}
+
+/* Icon Hover Effect */
+.navbar-icon:hover {
+    filter: brightness(1.2); /* Slightly brightens icon on hover */
+}
+
+
 /* hamburger nav */
 #hamburger-nav{
     display: none; 
@@ -93,14 +105,18 @@ li, a {
 }
 
 .menu-item{
-    position: absolute; 
-    top: 100%; 
+
+    height: 100vh;
+    position: fixed; 
+    top: 0; 
     right: 0;  
-    width: fit-content;
+    width: 250px;
     max-height: 0; 
-    overflow: hidden; 
+    overflow-x: hidden; 
     transition: all 0.5s ease-in-out;
     height: auto;
+    z-index: 2;
+
    
 }
 
