add new humburger nav

--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -1,5 +1,7 @@
 {% extends 'layout.html' %}
 
+{% block title %}{{page_title}}{% endblock %}
+
 {% block content %}
     <div class="searchBox">
         <input type="text" placeholder='Search....' id ='search'>
