--- a/www/static/css/styles.css
+++ b/www/static/css/styles.css
@@ -7,6 +7,7 @@
    
 }
 
+
 h1{
     font-family: "Playfair Display", serif; 
     text-align: center;
@@ -20,6 +21,7 @@ body{
     background-color: #1E1E2F;
     margin: 0; 
     padding: 0;   
+    min-height: 100vh;
 }
 
 li, a {
@@ -33,11 +35,6 @@ li, a {
 
 .logo{
     font-size: 2rem;
-    align-items: center;
-}
-
-.logo a{
-    margin-bottom: 30px;
 }
 
 .logo:hover{
@@ -71,109 +68,126 @@ li, a {
     width: 30px;
     height: 30px;
     vertical-align: middle;
-    filter: brightness(0) invert(1); /* Makes icon white */
+    filter: brightness(0) invert(1); /
 }
 
 /* Icon Hover Effect */
 .navbar-icon:hover {
-    filter: brightness(1.2); /* Slightly brightens icon on hover */
+    filter: brightness(1.2); 
 }
 
+/* Basic styling for body and nav */
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
 
-/* hamburger nav */
-#hamburger-nav{
-    display: flex; 
+#hamburger-nav {
+    display: none;
     justify-content: space-around;
     align-items: center;
-    padding-top: 20px;
+    padding: 20px;
+    color: white;
 }
 
-.hamburger-menu{
-    position: relative; 
-    display: inline-block; 
+.logo a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.5rem;
 }
 
-.hamburger-icon{
-    display: flex; 
+/* Hamburger icon styling */
+.hamburger-icon {
+    display: flex;
     flex-direction: column;
-    justify-content: space-around; 
-    height: 24px; 
-    width: 30px; 
+    justify-content: space-around;
+    width: 30px;
+    height: 24px;
     cursor: pointer;
 }
 
-.hamburger-icon span{
-    width: 100%; 
-    height: 2px; 
-    background-color: white;
-    transition: all 0.5s ease-in-out;
+.hamburger-icon span {
+    width: 100%;
+    height: 3px;
+    background-color: white; /* Ensure the color is visible */
+    transition: all 0.3s ease;
 }
 
-.menu-item{
-
-    height: 100vh;
-    position: fixed; 
-    top: 0; 
-    right: 0;  
+/* Sidebar styling */
+.hamburger-menu {
+    position: fixed;
+    top: 0;
+    right: -250px; 
     width: 250px;
-    max-height: 0; 
-    overflow-x: hidden; 
-    transition: all 0.5s ease-in-out;
-    height: auto;
-    z-index: 2;
-
-   
+    height: 100vh;
+    background-color: #00BFA5; 
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    transition: right 0.4s ease; 
+    z-index: 100;
 }
 
-.menu-item a{
-    display: block; 
-    padding:10px;
-    text-align: center; 
+.hamburger-menu.open {
+    right: 0; 
+}
+
+/* Sidebar menu item styling */
+.menu-item {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
+.menu-item li {
+    margin: 15px 0;
+    font-family: "Playfair Display", serif; 
+    font-weight: 500;
+    font-size: 30px;
+}
+
+.menu-item a {
+    display: flex; 
+    justify-content: flex-start;
+    color: white;
+    text-decoration: none;
     font-size: 1.5rem;
-    color: white; 
-    text-decoration: none; 
-    transition: all 0.5s ease-in-out;
-    background-color: darkmagenta;
+    transition: color 0.3s ease;
+    
 }
 
-
-.menu-item li{
-    list-style: none;
+.menu-item a:hover {
+    color: lightgray;
 }
 
-.menu-item.open{
-    max-height:300px;
+.hamburger-icon.open span:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
 }
 
-.hamburger-icon.open span:first-child{
-    transform: roate(45deg) translate(10px, 5px);
+.hamburger-icon.open span:nth-child(2) {
+    opacity: 0;
 }
 
-.hamburger-icon.open span:nth-child(2),
-.hamburger-icon.open span:nth-child(3){
-    opacity: 0; 
+.hamburger-icon.open span:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -5px);
 }
 
-.hamburger-icon.open span:last-child{
-    transform: roate(-45deg) translate(10px, -5px);
-}
-
-.hamburger-icon span:first-child{
-    transform: none;
-}
 
 #timeline{
     width: 100%;
     min-height: 100vh;
-    padding: 20px 15px;
+    padding: 100px 15px;
 }
 
 .timetine-title{
     font-size: 2.5rem;
     font-weight: 500px;
     text-align: center;
-    padding: 10px 15px;
-    Margin: 10px;
+    padding: 30px 15px;
+    Margin: 30px;
 }
 
 .timeline-containers{
@@ -281,13 +295,13 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
 
 /* search icon */
 .searchBox {
-    margin: 20px auto;
+    margin: 20px;
     height: 50px;
     display: flex;
     justify-content: flex-start;
     cursor: pointer;
     padding: 10px;
-    width: 85%;
+    width: 400px;
     border-radius: 30px;
     align-items: center;
     background-color: #2C2F33; 
@@ -296,17 +310,10 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
     z-index: 1;
 }
 
-.searchBox a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-}
-
 .searchBox a img {
     padding: 0;
     margin: 0;
-    width: 25px;
+    max-width: 35px;
     height: 100%;
 }
 
