--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,5 +1,6 @@
 {% extends 'layout.html' %}
 
+{% block title %}{{page_title}}{% endblock %}
 {% block content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/aboutstyles.css') }}">
 <section id="section__about">
