adding profile and profile testing

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -19,13 +19,13 @@
 <body onload= getData()>
     <nav id="desktop-nav">
         <div class='logo'> 
-        <a href="#"> Mr.President</a>    
+        <a href="/home"> Mr.President</a>    
         </div>
         <ul class="nav-menu">
             
             <li> <a href="/home"> Home</a></li>
             <li> <a href="#"> Profile</a></li>
-            <li> <a href="game"> Game</a></li>
+            <li> <a href="/game"> Game</a></li>
             <li> <a href="#"> Jump</a></li>
             <li> <a href="/about"> About</a></li>
         </ul>
