--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,7 +1,8 @@
 {% extends 'layout.html' %}
 
+{% block viewport%}  <meta name="viewport" content="width=device-width, initial-scale=1.0">{% endblock%}
 {% block title %}{{page_title}}{% endblock %}
 
 {% block content %}
-    {{ presidentData}}
-   {% endblock %}
+
+{% endblock %}
