--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block title %}{{page_title}}{% endblock %}
+{% block viewport%}  <meta name="viewport" content="width=device-width, initial-scale=1.0">{% endblock%}
 {% block content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/aboutstyles.css') }}">
 <section id="section__about">
