--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -1,7 +1,9 @@
 {% extends 'layout.html' %}
 
+{% block viewport%}  <meta name="viewport" content="width=device-width, initial-scale=1.0">{% endblock%}
 {% block  style %} 
 <link rel="stylesheet" href="{{ url_for('static', filename='css/game.css') }}"> 
+
 
 {%endblock%}
 {% block content %}
