Styling Profiles & Nav Bars

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -24,7 +24,7 @@
         <ul class="nav-menu">
             
             <li> <a href="/home"> Home</a></li>
-            <li> <a href="#"> Profile</a></li>
+            <li> <a href="/profile"> Profile</a></li>
             <li> <a href="/game"> Game</a></li>
             <li> <a href="#"> Jump</a></li>
             <li> <a href="/about"> About</a></li>
@@ -33,7 +33,7 @@
 
     <nav id="hamburger-nav">
         <div class="logo">
-            <a href="#"> Mr.President</a> 
+            <a href="/home"> Mr.President</a> 
         </div>
 
         <div class="hamburger-icon" onclick="toggleMenu()">
@@ -52,7 +52,7 @@
                    
                 </li>
                 <li><a href="/home" onclick="toggleMenu()">Home</a></li>
-                <li><a href="#" onclick="toggleMenu()">Profile</a></li>
+                <li><a href="/profile" onclick="toggleMenu()">Profile</a></li>
                 <li><a href="/game" onclick="toggleMenu()">Game</a></li>
                 <li><a href="#" onclick="toggleMenu()">Jump</a></li>
                 <li><a href="/about" onclick="toggleMenu()">About</a></li>
