--- a/app/templates/pres_profile.html
+++ b/app/templates/pres_profile.html
@@ -1,20 +1,22 @@
 {% extends 'layout.html' %}
 {% block viewport%}  <meta name="viewport" content="width=device-width, initial-scale=1.0">{% endblock%}
+
 {% block title %}{{page_title}}{% endblock %}
+
 {% block content %}
 
 <div class="pres-container">
+    <h2>{{ president["Name"] }}</h2>
     <div class = 'pres-info'>
     <img src="{{ president['IMG filepath'] }}" alt="{{ president['Name'] }}" class="pres-image">
-        <div class="pres-name">{{ president["Name"] }}</div>
         <div class="pres-details">
             <p>President Number: {{ president["No"] }}</p>
-            <p>Years Served:{{ president["Term Years"] }}</p>
+            <p>Years Served: {{ president["Term Years"] }}</p>
             <p>Vice President: {{ president["Vice President"] }}</p>
             <p>First Lady: {{ president["First Lady"] }}</p>
             <p>Party: {{ president["Party"] }}</p>
         </div>
-    </div>
+    </div>  
     <div class = 'pres-description'>
         <p>Description: {{ president["Description"] }}</p>
     </div>
