--- a/www/static/css/styles.css
+++ b/www/static/css/styles.css
@@ -46,6 +46,8 @@ li, a {
     width: 100%;
     padding-top: 20px;
     justify-content:space-around;
+    align-items: center;
+    align-content: center;
 }
 
 .nav-menu{
@@ -55,6 +57,8 @@ li, a {
 .nav-menu li{
     display: inline-block; 
     padding: 0 20px;
+    align-items: center;
+    align-content: center;
 }
 
 .nav-menu a:hover{
@@ -117,10 +121,10 @@ body {
 .hamburger-menu {
     position: fixed;
     top: 0;
-    right: -250px; 
-    width: 250px;
+    right: -150px; 
+    width: 150px;
     height: 100vh;
-    background-color: #00BFA5; 
+    background-color: #d7c593; 
     color: white;
     display: flex;
     flex-direction: column;
@@ -417,32 +421,43 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
     margin: 0 auto;
     padding: 20px;
 }
+
+.pres-container h2{
+    margin-bottom: 20px;
+}
+
 .pres-info {
     display: flex;
     align-items: center;
     gap: 20px;
     margin-bottom: 20px;
 }
+
 .pres-image {
     width: 150px;
-    height: 150px;
+    height: 250px;
     object-fit: cover;
-    border-radius: 50%;
+    border-radius: 20%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
+
 .pres-name {
     font-size: 2em;
     font-weight: bold;
     margin-bottom: 10px;
+    align-self: center;
 }
+
 .pres-details p {
     margin: 5px 0;
-    font-size: 1.1em;
+    font-size: 0.7em;
 }
+
 .pres-description {
-    margin-top: 20px;
+    margin-top: 0.8em;
 }
+
 .pres-description p {
-    font-size: 1.2em;
+    font-size: 20 px;
     line-height: 1.5;
 }
