PyTest Fix & More Formatting

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block viewport%}  <meta name="viewport" content="width=device-width, initial-scale=1.0">{% endblock%}
 
-{% block title %}{{page_title}}{% endblock %}
+{% block title %} Presidential Timeline {% endblock %}
 
 {% block content %}
     <div class="searchBox">
