--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>{% block title %}Default Title{% endblock %}</title>
+    <title>{% block title %}Mr. President{% endblock %}</title>
     <meta charset="UTF-8">
 
     {% block viewport%} {% endblock%}
