--- a/www/static/css/styles.css
+++ b/www/static/css/styles.css
@@ -12,13 +12,13 @@ h1{
     font-family: "Playfair Display", serif; 
     text-align: center;
     font-style: italic;
-    color: #F5F5F5;
+    color: #ffffff;
     padding: 20px;
-    font-size: 40px;
+    font-size: 30px;
 
 }
 body{
-    background-color: #1E1E2F;
+    background-color: #cbcaca;
     margin: 0; 
     padding: 0;   
     min-height: 100vh;
@@ -34,7 +34,7 @@ li, a {
 
 
 .logo{
-    font-size: 2rem;
+    font-size: 0.5rem;
 }
 
 .logo:hover{
@@ -44,10 +44,11 @@ li, a {
 #desktop-nav{
     display:flex; 
     width: 100%;
-    padding-top: 20px;
+    padding: 10px;
     justify-content:space-around;
     align-items: center;
     align-content: center;
+    background-color: #0A2C5A;
 }
 
 .nav-menu{
@@ -62,9 +63,15 @@ li, a {
 }
 
 .nav-menu a:hover{
-    text-decoration: underline;
-    text-underline-offset: 1rem;
-    
+    transform: scale(1.5);
+    transition: 0.3s ease;
+    color: #adc7e4;
+}
+
+.logo a:hover{
+    transform: scale(1.5);
+    transition: 0.3s ease;
+    color: #adc7e4;
 }
 
 /* Navbar Icon */
@@ -92,6 +99,7 @@ body {
     align-items: center;
     padding: 20px;
     color: white;
+    background-color: #0A2C5A;
 }
 
 .logo a {
@@ -124,7 +132,7 @@ body {
     right: -150px; 
     width: 150px;
     height: 100vh;
-    background-color: #d7c593; 
+    background-color: #A7B2BB; 
     color: white;
     display: flex;
     flex-direction: column;
@@ -187,7 +195,7 @@ body {
 }
 
 .timetine-title{
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     font-weight: 500px;
     text-align: center;
     Margin: 0px 10px;
@@ -255,9 +263,14 @@ body {
     margin: 10px 0px;
     text-transform: capitalize;
     font-weight: 500px;
-    color: #d7c593;
-    text-decoration: underline;
+    color: #A7B2BB;
 }
+
+.textbox a:hover {
+    text-decoration: underline;
+    color:#74828e;
+}
+
 .textbox{
     font-size: 16px;
     font-weight: 300px;
@@ -306,13 +319,14 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
     justify-content: flex-start;
     cursor: pointer;
     padding: 10px;
-    width: 80% auto;
+    width: 60% auto;
     border-radius: 30px;
     align-items: center;
-    background-color: #2C2F33; 
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); 
+    background-color: #F5F5F5; 
+    border: 10px;
     position: relative; 
     z-index: 1;
+    border-color: #E0E0E0;
 }
 
 .searchBox a img {
@@ -339,12 +353,12 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
 
 .searchBox:hover input {
     width: 100%; 
-    color: #ECEFF4; 
+    color: #9B2D20; 
     border-bottom: 2px solid #5E81AC;
 }
 
 .searchBox:hover {
-    background-color: #404552; 
+    background-color: #E0E0E0; 
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4); 
 }
 
@@ -356,7 +370,7 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
     width: 100%; 
     max-height:200px; 
     overflow-y: auto; 
-    background-color: #2C2F33;
+    background-color: #0A2C5A;
     border-radius: 0 0 10px 10px; 
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
     position: absolute;
@@ -425,7 +439,7 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
 
 .pres-container h2{
     margin-bottom: 20px;
-    color:#d7c593;
+    color:#A7B2BB;
     text-decoration: underline;
 }
 
@@ -463,4 +477,44 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
 .pres-description p {
     font-size: 20 px;
     line-height: 1.5;
+}
+
+footer {
+    background-color:#050821;
+    color: #A7B2BB;
+    padding: 20px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.footer-container {
+    display: flex inline-block;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.footer-contact h3 {
+    margin-bottom: 10px;
+    font-size: 0.5 rem;
+}
+
+.footer-contact p {
+    font-size: 0.5rem;
+    margin: 5px 0;
+}
+
+.footer-contact a {
+    color: #A7B2BB;
+    text-decoration: none;
+    font-size: 0.5rem;
+}
+
+.footer-contact a:hover {
+    text-decoration: underline;
+}
+
+.footer-copyright p{
+    align-self: flex-end;
+    font-size: 0.5rem;
 }
