LocalStorage and background color dark_light Mode added

--- a/www/static/css/styles.css
+++ b/www/static/css/styles.css
@@ -1,6 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,500;1,6..96,500&display=swap');
+
+:root{
+    --background-color: #1E1E2F;
+    --primary-text: #F5F5F5;
+    --ComponentBase-color: white;
+    --humbar-color: #d7c593;
+    --search-box: #1E1E2F;
+    --textbox-color: #2F363E;
+    --contrast-back:rgb(253, 239, 221);
+    
+}
+
+.lightMode {
+    --background-color:rgb(253, 239, 221);
+    --primary-text: brown; 
+    --ComponentBase-color: #1E1E2F; 
+    --humbar-color: #d7c593;  
+    --search-box:red;
+    --textbox-color: #E0E0E0;
+    --contrast-back: #1E1E2F;
+}
+
+
+
 *{
-    color: white;
+    color: var(--ComponentBase-color);
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -12,13 +36,13 @@ h1{
     font-family: "Playfair Display", serif; 
     text-align: center;
     font-style: italic;
-    color: #F5F5F5;
+    color: var(--primary-text);
     padding: 20px;
     font-size: 40px;
 
 }
 body{
-    background-color: #1E1E2F;
+    background-color: var(--background-color);
     margin: 0; 
     padding: 0;   
     min-height: 100vh;
@@ -29,7 +53,7 @@ li, a {
     font-weight: 500;
     font-size: 30px;
     text-decoration: none;
-    color: #F5F5F5;
+    color: var(--primary-text);
 }
 
 
@@ -91,11 +115,11 @@ body {
     justify-content: space-around;
     align-items: center;
     padding: 20px;
-    color: white;
+    color: var(--ComponentBase-color);
 }
 
 .logo a {
-    color: white;
+    color: var(--ComponentBase-color);
     text-decoration: none;
     font-size: 1.5rem;
 }
@@ -113,7 +137,7 @@ body {
 .hamburger-icon span {
     width: 100%;
     height: 3px;
-    background-color: white; /* Ensure the color is visible */
+    background-color: var(--ComponentBase-color); /* Ensure the color is visible */
     transition: all 0.3s ease;
 }
 
@@ -125,7 +149,7 @@ body {
     width: 150px;
     height: 100vh;
     background-color: #d7c593; 
-    color: white;
+    color: var(--ComponentBase-color);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -156,7 +180,7 @@ body {
 .menu-item a {
     display: flex; 
     justify-content: flex-start;
-    color: white;
+    color: var(--ComponentBase-color);
     text-decoration: none;
     font-size: 1.5rem;
     transition: color 0.3s ease;
@@ -216,7 +240,7 @@ body {
     padding-left: calc(50% + 30px) ;
 }
 .textbox{
-    background-color: #2F363E;
+    background-color: var(--textbox-color);
     padding: 30px;
     border-radius: 5px;
 }
@@ -225,7 +249,7 @@ body {
     position: absolute;
     width: 5px;
     height: 100%;
-    background-color: white;
+    background-color: var(--ComponentBase-color);
     left: calc(50% - 1px);
 }
 .timeline-container:last-child{
@@ -309,7 +333,7 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
     width: 80% auto;
     border-radius: 30px;
     align-items: center;
-    background-color: #2C2F33; 
+    background-color: var( --search-box); 
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); 
     position: relative; 
     z-index: 1;
@@ -463,4 +487,30 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
 .pres-description p {
     font-size: 20 px;
     line-height: 1.5;
+}
+
+/*  Testing dark and light mode*/
+/* New Mode */
+.switch-mode{
+    height: 50px; 
+    width: 50px;
+    border-radius: 50%;
+    background-color: var(--contrast-back);
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+
+.switch-mode svg:first-child {
+    display: none; 
+}
+.switch-mode svg:last-child {
+    display: block; 
+}
+
+.lightMode #switch-mode svg:first-child {
+    display: block; 
+}
+.lightMode #switch-mode svg:last-child {
+    display: none; 
 }
