--- a/www/static/css/aboutstyles.css
+++ b/www/static/css/aboutstyles.css
@@ -9,13 +9,14 @@ h1{
 h2{
     font-size: 35px;
 }
-*{
+
+/* *{
     font-family: "Playfair Display", serif; 
     font-weight: 300;
     font-size: 30px;
     text-decoration: none;
-    color:#ffffff;
-}
+    color:brown;
+} */
 
 .menu-item a{
     display: block; 
@@ -28,7 +29,7 @@ h2{
 
 .whiteHouse{
     border-radius: 20px;
-    border: 5px solid white;
+    border: 5px solid black;
     margin: 30px;
     width: 100%; 
     height: 100%;
@@ -158,3 +159,4 @@ input:checked + .slider:before {
     background-color: #fdefdd;
     color:brown;
 }
+
