add game and needed to fixed footer

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,32 +1,10 @@
 {% extends 'layout.html' %}
+
+{% block title %} About Mr. President {% endblock %}
 {% block viewport%}  <meta name="viewport" content="width=device-width, initial-scale=1.0">{% endblock%}
-
-{% block title %} Presidential Timeline {% endblock %}
-
 {% block content %}
-    <div class="searchBox">
-        <input type="text" placeholder='Search....' id ='search'>
-        <a href="#">
-            <img src="../static/img/search.png">
-        </a>    
-        <ul id='results'>
-
-        </ul>
-    </div>
+<h1>Hello World ! working on homepage Coming soon </h1>
 
 
-    <section id ="timeline">
-        <div class="timetine-title">Presidents of the United States Of America</div>
-        <div class="timeline-containers"></div>
-    </div>
-    </section>
 
-    <div id="flyIcon" onclick ='scrollUp()' >
-        <img src="https://img.icons8.com/?size=100&id=166&format=png&color=000000" alt="flyicon"  />
-    </div>
-   
-
-    
-    
-
-   {% endblock %}
+{% endblock %}
