--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -23,13 +23,14 @@
 </head>
 
 <body onload= getData()>
+   
     <nav id="desktop-nav">
         <div class='logo'> 
         <a href="/home"> Mr.President</a>    
         </div>
         <ul class="nav-menu">
             <li> <a href="/home"> Home</a></li>
-            <li> <a href="/profile"> Profile</a></li>
+            <li> <a href="/timeline"> Profile</a></li>
             <li> <a href="/game"> Game</a></li>
             <li> <a href="#"> Jump</a></li>
             <li> <a href="/about"> About</a></li>
@@ -63,7 +64,7 @@
                    
                 </li>
                 <li><a href="/home" onclick="toggleMenu()">Home</a></li>
-                <li><a href="/profile" onclick="toggleMenu()">Profile</a></li>
+                <li><a href="/timeline" onclick="toggleMenu()">Profile</a></li>
                 <li><a href="/game" onclick="toggleMenu()">Game</a></li>
                 <li><a href="#" onclick="toggleMenu()">Jump</a></li>
                 <li><a href="/about" onclick="toggleMenu()">About</a></li>
@@ -76,9 +77,28 @@
             </ul>
         </div>
     </nav>
-   
+
     {% block content %}{% endblock %}
     {% block script%}{% endblock %}
+  
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-contact">
+                <h3>Contact Us</h3>
+                <p>Email Flynn: <a href="mailto:nisbco3@furman.edu">nisbco3@furman.edu</a></p>
+                <p>Email Mengsrun: <a href="mailto:nitme0@furman.edu">nitme0@furman.edu</a></p>
+                <p>Email Olivia: <a href="mailto:longol4@furman.edu">longol4@furman.edu</a></p>
+            </div>
+     
+            <div class="footer-copyright">
+                <p>Phone: +1.864.294.2000</p>
+                <p>Address: 3300 Poinsett Hwy, Greenville, SC, 29613</p>
+                <p>&copy; 2024 Mr. President. All Rights Reserved.</p>
+            </div>
+        </div>
+        </footer>
+     
 
    <script src="{{ url_for('static', filename='script/script.js') }}"></script>
    <script src = "{{ url_for('static', filename='script/lightmode.js') }}" defer></script>
