--- a/www/static/css/mediaqueries.css
+++ b/www/static/css/mediaqueries.css
@@ -42,6 +42,16 @@
     .timeline-dot{
         left: 0px; 
     }
+    .games-container {
+        width: 100%;
+        height: 100%;
+        display: flex; 
+        justify-content: center; 
+        align-items: center; 
+        flex-direction: column;
+        gap: 20px; 
+        margin-top: 20px
+    }
 
 }
 
