--- a/www/static/css/styles.css
+++ b/www/static/css/styles.css
@@ -13,7 +13,7 @@
 
 .lightMode {
     --background-color:rgb(253, 239, 221);
-    --primary-text: brown; 
+    --primary-text: brown;
     --ComponentBase-color: #1E1E2F; 
     --humbar-color: #d7c593;  
     --search-box:#242448; 
@@ -24,6 +24,7 @@
 
 
 *{
+    font-family: "Playfair Display", serif; 
     color: var(--ComponentBase-color);
     margin: 0;
     padding: 0;
@@ -513,4 +514,62 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
 }
 .lightMode svg:last-child {
     display: none; 
+}
+/* 
+#change-profile{
+    display: flex; 
+    justify-content: space-between;
+    justify-items: center;
+} */
+.footer {
+    position: fixed; 
+    bottom: 0;
+    left: 0;
+    width: 100%; 
+    background-color: #c6a979;
+    color: #333; 
+    padding: 20px;
+    text-align: center;
+    z-index: 10; 
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+    max-width: 1200px;
+    margin: 0 auto;
+    gap: 20px; 
+}
+
+.footer-contact, .footer-copyright {
+    flex: 1; 
+    text-align: left; 
+    padding: 10px;
+}
+
+.footer-contact h3 {
+    margin-bottom: 10px;
+    font-size: 0.8rem; 
+    color: #444; 
+}
+
+.footer-contact p {
+    font-size: 0.8rem;
+    margin: 5px 0;
+}
+
+.footer-contact a {
+    color: #0044cc;
+    text-decoration: none;
+    font-size: 0.8rem;
+}
+
+.footer-contact a:hover {
+    text-decoration: underline;
+}
+
+.footer-copyright p {
+    font-size: 0.8rem;
+    margin: 5px 0;
 }
