--- a/www/static/css/styles.css
+++ b/www/static/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,500;1,6..96,500&display=swap');
 
 :root{
-    --background-color: #1E1E2F;
+    --background-color: #333333e5;
     --primary-text: #F5F5F5;
     --ComponentBase-color: white;
     --humbar-color: #d7c593;
