--- a/app/templates/pres_profile.html
+++ b/app/templates/pres_profile.html
@@ -19,7 +19,21 @@
     <div class = 'pres-description'>
         <p>{{ president["Description"] }}</p>
     </div>
-
 </div>
 
+<div class="rating-container" data-president-name="{{ president['Name']}}">
+    <h1> how would you rate <b>{{president["Name"]}}</b> </h1>
+    <div class="star-rating">
+        <span class="star" data-value="1">&#9733;</span>
+        <span class="star" data-value="2">&#9733;</span>
+        <span class="star" data-value="3">&#9733;</span>
+        <span class="star" data-value="4">&#9733;</span>
+        <span class="star" data-value="5">&#9733;</span>
+      </div>
+      <p id="rating-value">Rating: 0</p>
+      <button id="submit-rating" > Submit Rating</button>
+</div>
+{% endblock %}
+
+{% block script%} <script src = "{{ url_for('static', filename='script/rating.js') }}" defer></script>
 {% endblock %}
