--- a/app/templates/game/game.html
+++ b/app/templates/game/game.html
@@ -9,10 +9,17 @@
 {% block content %}
 
 <section id ="quiz2">
-    <h1>Please select the game</h1>
+    <h1>Test your Knowledge</h1>
     <div class= "games-container ">
-        <div class= "quiz-game"> <a href="/game/1"> Quiz Game</a> </div>
-        <div class= "guess-game"> <a href="/game/2"> Guess Game</a> </div>
+        <div class= "quiz-game">
+         <a href="/game/1"> Quiz Game</a>
+         <img src="{{ url_for('static', filename='img/Quiz.webp') }}" alt="pf">
+        </div>
+        <div class= "guess-game"> 
+            <a href="/game/2"> Guess Game</a> 
+            <img src="{{ url_for('static', filename='img/Guess.webp') }}" alt="pf">
+        
+        </div>
 
     </div>
     
