--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -17,7 +17,7 @@
 
     <div class="content-switcher">
         <button id="timelineButton" class="switch-button active">Timeline</button>
-        <button id="profileButton" class="switch-button">Details</button>
+        <button id="profileButton" class="switch-button">Profiles</button>
     </div>
 
 
