--- a/www/static/css/profiles.css
+++ b/www/static/css/profiles.css
@@ -60,3 +60,9 @@
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
 
+.content-switcher {
+  display: block; 
+  width: fit-content;
+  margin: auto; 
+  text-align: center; 
+}
